template/trinity-partch-march/trinity-large-preview:free-20260302/row_75_update_13_template_20260303_115058.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create a Windows EC2 instance with SSM integration for CPU stress testing

Parameters:
  AMIId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-windows-latest/Windows_Server-2019-English-Full-Base
  InstanceType:
    Type: String
    Default: t3.nano
    AllowedValues:
      - t3.nano
      - t3.micro
      - t3.small
      - t3.medium
      - t3.large
    ConstraintDescription: Must be a valid T3 instance type
  SubnetId:
    Type: String
    Default: ''
  CPUStressDuration:
    Type: Number
    Default: 300
    MinValue: 60
    MaxValue: 3600
    Description: Duration in seconds for CPU stress test (60-3600 seconds)

Resources:
  IAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
                - ssm.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Policies:
        - PolicyName: FISAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ssm:SendCommand
                  - ssm:GetCommandInvocation
                  - ssm:ListCommands
                Resource: '*'
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: '*'
              - Effect: Allow
                Action:
                  - ec2:DescribeInstanceStatus
                Resource: '*'
              - Effect: Allow
                Action:
                  - fis:CreateExperimentTemplate
                  - fis:DeleteExperimentTemplate
                  - fis:GetExperiment
                  - fis:GetExperimentTemplate
                  - fis:ListExperimentTemplates
                  - fis:ListExperiments
                  - fis:StartExperiment
                  - fis:StopExperiment
                  - fis:UpdateExperimentTemplate
                Resource: '*'

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IAMRole

  SSMDocument:
    Type: AWS::SSM::Document
    Properties:
      Name: CPUStressTest
      DocumentType: Command
      Content:
        schemaVersion: '1.0'
        description: CPU Stress Test Script
        parameters:
          duration:
            type: Number
            description: Duration in seconds for CPU stress test
            default: !Ref CPUStressDuration
        mainSteps:
          - action: 'aws:runPowerShellScript'
            name: CPUStressTest
            inputs:
              runCommand:
                - '$logicalProcessors = (Get-WmiObject -Class Win32_Processor).NumberOfLogicalProcessors'
                - '$duration = {{ duration }}'
                - '$scriptBlock = { param($duration) ; $stopwatch = [System.Diagnostics.Stopwatch]::StartNew() ; while($stopwatch.Elapsed.TotalSeconds -lt $duration) { [Math]::Sqrt([Math]::PI) } }'
                - '1..$logicalProcessors | ForEach-Object { Start-Job -ScriptBlock $scriptBlock -ArgumentList $duration }'
                - 'Get-Job | Wait-Job'
                - 'Remove-Job -State Completed'

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Windows instance with SSM access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMIId
      InstanceType: !Ref InstanceType
      IamInstanceProfile: !Ref InstanceProfile
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !GetAtt SecurityGroup.GroupId
          SubnetId: !If [UseProvidedSubnet, !Ref SubnetId, !Ref DefaultSubnet]
      UserData:
        Fn::Base64: |
          <powershell>
          winrm quickconfig -q
          net stop winrm
          sc.exe config winrm start= auto
          net start winrm
          </powershell>

  DefaultSubnet:
    Type: AWS::EC2::Subnet
    Condition: CreateDefaultSubnet
    Properties:
      VpcId: !Ref DefaultVPC
      CidrBlock: 172.31.0.0/20
      AvailabilityZone: !Select [0, !GetAZs '']

  DefaultVPC:
    Type: AWS::EC2::VPC
    Condition: CreateDefaultVPC
    Properties:
      CidrBlock: 172.31.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

Conditions:
  UseProvidedSubnet: !Not [!Equals [!Ref SubnetId, '']]
  CreateDefaultVPC: !Equals [!Ref SubnetId, '']
  CreateDefaultSubnet: !Equals [!Ref SubnetId, '']

Outputs:
  InstanceId:
    Value: !Ref EC2Instance
    Description: ID of the created EC2 instance
  InstancePublicIp:
    Value: !GetAtt EC2Instance.PublicIp
    Description: Public IP address of the EC2 instance
  InstanceProfileName:
    Value: !Ref InstanceProfile
